# dawalmaar

./: .gitignore  Cargo.toml
bot/: Cargo.toml
bot/src/: commands.rs  game.rs  main.rs  setup.rs
bot/src/commands/: add_player.rs  hand.rs  mod.rs  ping.rs  play.rs  register.rs  register_commands.rs  start.rs
bot/src/utils/: mod.rs  no_game.rs  parse_card.rs
dawalmaar/: Cargo.toml
dawalmaar/src/: cards.rs  deck.rs  enums.rs  game.rs  game_errors.rs  lib.rs  player.rs  player_errors.rs  teams.rs
