[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dawalmaar = { path = "../dawalmaar" }
poise = { git = "https://github.com/kangalioo/poise", branch = "master", features = [
	"collector",
] }
dotenv = "0.15.0"
