[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dawalmaar = { path = "../dawalmaar" }
poise = { git = "https://github.com/kangalioo/poise", branch = "master", features = [
	"collector",
] }
dotenv = "0.15.0"
indexmap = "1.8.0"
dashmap = "5.1.0"
regex = "1.5.4"
lazy_static = "1.4.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "process"] }
